; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/core/seq/extr_seq_clientmgr.c_snd_seq_kernel_client_enqueue_blocking.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/core/seq/extr_seq_clientmgr.c_snd_seq_kernel_client_enqueue_blocking.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_seq_event = type { i32 }
%struct.file = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @snd_seq_kernel_client_enqueue_blocking(i32 %0, %struct.snd_seq_event* %1, %struct.file* %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca %struct.snd_seq_event*, align 8
  %8 = alloca %struct.file*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store i32 %0, i32* %6, align 4
  store %struct.snd_seq_event* %1, %struct.snd_seq_event** %7, align 8
  store %struct.file* %2, %struct.file** %8, align 8
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %11 = load i32, i32* %6, align 4
  %12 = load %struct.snd_seq_event*, %struct.snd_seq_event** %7, align 8
  %13 = load %struct.file*, %struct.file** %8, align 8
  %14 = load i32, i32* %9, align 4
  %15 = load i32, i32* %10, align 4
  %16 = call i32 @kernel_client_enqueue(i32 %11, %struct.snd_seq_event* %12, %struct.file* %13, i32 1, i32 %14, i32 %15)
  ret i32 %16
}

declare dso_local i32 @kernel_client_enqueue(i32, %struct.snd_seq_event*, %struct.file*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
